# Projeto-Snake-AI-B

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: core.c  core.h  getch_test.c  henrique.c  labirinto.c  labirinto.h  main.c  snake_classico.c  snake_classico.h
